# grc-macronizer

./: .gitattributes  .gitignore  .gitmodules  JSON.lua  README.md  TemplateStyles.lua  algorithm2_nominal_forms.py  algorithm_1_accent_rules.py  anabasis.txt  anabasis.xml  anabasis_macronized.py  anabasis_macronized.txt  anabasis_markup.py  anabasis_unicode.py  array.lua  ascii.txt  barytone.py  chatgpt.py  class_macronizer.py  class_text.py  clear_diagnostics.sh  collation.lua  count_words.py  crawl_lsj_multi.py  crawl_lsj_multi_alvis.py  debug.lua  edit_cast.py  en_utilities.lua  epic_stop_words.py  extract_lsj_keys.py  families.lua  file-structure.py  find_missing_titles.py  format_anabasis.ipynb  format_macrons.py  fun.lua  grc-accent.lua  grc-conj.lua  grc-decl.lua  grc-utilities.lua  (+59 more)
JSON/: JSON.lua
anchors/: anchors.lua
collation/: collation.lua
data/: interwikis.lua  namespaces.lua
db/: crawl_lsj.py  custom.py  custom.tsv  ionic.py  lsj.py  lsj_keys_first_70k.py  lsj_keys_last_70k.py  wiktionary_ambiguous.py
debug/: debug.lua  track.lua
diagnostics/: still_ambiguous_Ξενίας_1.py
families/: data.lua  families.lua  track_bad_etym_code.lua
grc-conj/: data.lua  grc-conj.lua
grc-decl/: decl.lua  grc-decl.lua  params.lua  shared.lua  table.lua
grc-translit/: grc-translit.lua
grc-utilities/: data.lua  grc-utilities.lua  templates.lua
headword/: data.lua  page.lua
labels/: data.lua  labels.lua
language_like/: language_like.lua
languages/: data.lua  doSubstitutions.lua  errorGetBy.lua  languages.lua
links/: data.lua  links.lua
(+68 files in other folders)
